# mimiRpa

./: .gitignore  CHANGELOG.md  README.md  components.json  electron.vite.config.1759366350270.mjs  electron.vite.config.ts  eslint.config.mjs  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
app/: app.tsx  index.html  renderer.tsx
app/biz/: component_service.ts  editor_service.ts  project_editor_biz.ts  project_service.ts  store_service.ts  ui_service.ts  workflow_editor_biz.ts
app/components/: ErrorBoundary.tsx
app/foreign/: Foreign.ts  IProject.ts
app/hooks/: use-conveyor.ts
app/styles/: app.css  globals.css  window.css
data/default_user/: projectlist.json
electron/biz/: app_service.ts  (+2 more)
python/common/: pyproject.toml
python/common/common.egg-info/: PKG-INFO  SOURCES.txt
python/common/common/exception/: biz_exception.py
python/common/common_base.egg-info/: PKG-INFO  SOURCES.txt
python/common/components_base.egg-info/: PKG-INFO  SOURCES.txt
python/components/base/: README.md  pyproject.toml
python/components/base/base/: __init__.py  activity_exception.py  activity_manager.py  activity_node_info.py  arguments.py  base_activity.py  field_annotation.py  final_activity_decorate.py  variables.py
python/components/base/components_base.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/components/operation_system/: README.md  pyproject.toml
python/components/operation_system/components_operation_system.egg-info/: PKG-INFO  SOURCES.txt
python/components/operation_system/operation_activity/: __init__.py  read_file_activity.py
python/components/operation_system/tests/: operation_test.py
python/mimi_ui_automation/: pyproject.toml
python/mimi_ui_automation/automation/: __init__.py  targetElement.py
python/mimi_ui_automation/automation/model/: point.py  request_element_data.py
python/mimi_ui_automation/mimi_ui_automation.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
service/: agent.py  agent_application.py  pyproject.toml
service/agent/: application.py  main.py  web_socket_context.py
service/agent/common/exception/: biz_exception.py
service/agent/controller/: selector_controller.py
service/common/exception/: sys_exception.py
service/src/: assistant.py  assistant_application.py  engine.py  engine_application.py  web_socket_context.py
service/src/biz/: tk_window_manager.py
service/src/common/exception/: sys_exception.py
service/src/controller/: selector_controller.py
service/src/engine/models/: start_parameters.py
service/src/uiAutomation/: @AutomationLog.txt  __init__.py  web_operation.py  web_ui_automation_select.py
service/uiAutomation/: @AutomationLog.txt  README.md  chrome_playwright.py  test.py  tk_window_manager.py  uiAutomation.py  ui_automation_select.py  ui_ws_watcher.py  web_operation.py  web_ui_automation_select.py  windowsUIAutomationSelect.py
service/uiAutomation/model/: call_info.py  request_element_data.py  viewport_rect.py  web_control.py  web_target_element.py
(+144 files in other folders)
