[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mimi_ui_automation"
version = "1.0.0"
description = "mimi ui 自动化"
authors = [
  { name="wzl", email="wzl0602@hotmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [           # 如果你的脚本依赖其他库，写在这里
    "components-base >= 1.0.0",
]

[project.entry-points."mimi.ui_automation"]
mimi_ui_automation = "automation.entry_points:EntryPoints"

[tool.setuptools.packages.find]
where = ["."]
include = ["automation*"]